SUBDIRS = gavl

includedir = $(prefix)/lib/gavl/include

private_headers = \
attributes.h \
audio.h \
colorspace.h \
float_cast.h \
interleave.h \
mix.h \
sampleformat.h \
scale.h \
video.h \
volume.h

include_HEADERS = gavlconfig.h

noinst_HEADERS =  $(private_headers)

#noinst_HEADERS =  $(public_headers) $(private_headers)

EXTRA_DIST=Makefile.am.in
