SUBDIRS = gavl

includedir = $(prefix)/lib/gavl/include

private_headers = \
accel.h \
arith128.h \
attributes.h \
audio.h \
blend.h \
colorspace.h \
deinterlace.h \
float_cast.h \
interleave.h \
mix.h \
sampleformat.h \
scale.h \
video.h \
volume.h

include_HEADERS = gavlconfig.h

noinst_HEADERS =  $(private_headers)


