noinst_PROGRAMS = colorspace_test colorspace_time scaletest scale_time

colorspace_test_SOURCES = colorspace_test.c
colorspace_test_LDADD = ../gavl/libgavl.la -lpng -lz

scaletest_SOURCES = scaletest.c
scaletest_LDADD = ../gavl/libgavl.la -lpng -lz

scale_time_SOURCES = scale_time.c
scale_time_LDADD = ../gavl/libgavl.la

colorspace_time_SOURCES = colorspace_time.c
colorspace_time_LDADD = ../gavl/libgavl.la


