noinst_PROGRAMS = colorspace_test colorspace_time scaletest scale_time timescale_test blend_test

colorspace_test_SOURCES = colorspace_test.c
colorspace_test_LDADD = ../gavl/libgavl.la -lpng -lz

blend_test_SOURCES = blend_test.c
blend_test_LDADD = ../gavl/libgavl.la -lpng -lz

scaletest_SOURCES = scaletest.c
scaletest_LDADD = ../gavl/libgavl.la -lpng -lz

scale_time_SOURCES = scale_time.c
scale_time_LDADD = ../gavl/libgavl.la

colorspace_time_SOURCES = colorspace_time.c
colorspace_time_LDADD = ../gavl/libgavl.la

timescale_test_SOURCES = timescale_test.c
timescale_test_LDADD = ../gavl/libgavl.la
