pkgdatadir = $(datadir)/gmerlin/icons

icons = \
gmerlerra_frame_backward.png \
gmerlerra_frame_forward.png \
gmerlerra_goto_end.png \
gmerlerra_goto_start.png \
gmerlerra_goto_next.png \
gmerlerra_goto_prev.png \
gmerlerra_play.png \
gmerlerra_stop.png \
new_16.png \
redo_16.png \
save_as_16.png \
time_zoom_fit.png \
time_zoom_in.png \
time_zoom_out.png \
undo_16.png

pkgdata_DATA = $(icons)

dist_pkgdata_DATA = $(icons)
