pkgdatadir = $(datadir)/gmerlin/icons/gmerlerra

icons = \
frame_backward.png \
frame_forward.png \
goto_end.png \
goto_start.png \
goto_next.png \
goto_prev.png \
play.png \
record.png \
stop.png \
new_16.png \
redo_16.png \
save_as_16.png \
time_zoom_fit.png \
time_zoom_in.png \
time_zoom_out.png \
undo_16.png

pkgdata_DATA = $(icons)

dist_pkgdata_DATA = $(icons)
