pkgdatadir = $(datadir)/gmerlin/icons/gmerlerra

icons = \
edit_insert.png \
edit_overwrite.png \
frame_backward.png \
frame_forward.png \
goto_end.png \
goto_start.png \
goto_next.png \
goto_prev.png \
in.png \
out.png \
play.png \
stop.png \
new_16.png \
redo_16.png \
save_as_16.png \
time_zoom_fit.png \
time_zoom_in.png \
time_zoom_out.png \
undo_16.png

pkgdata_DATA = $(icons)

dist_pkgdata_DATA = $(icons)
