SUBDIRS = gtk

noinst_LTLIBRARIES = libgmerlerra.la

libgmerlerra_la_SOURCES = \
composite_audio.c \
composite_video.c \
editops.c \
instream.c \
medialist.c \
medialist_xml.c \
render_outstream.c \
outstream.c \
outstream_xml.c \
project.c \
project_xml.c \
projectsettings.c \
renderer.c \
timerange.c \
track.c \
track_xml.c

