SUBDIRS = gtk

noinst_LTLIBRARIES = libgmerlerra.la

libgmerlerra_la_SOURCES = \
clipboard.c \
clipboard_xml.c \
composite_audio.c \
composite_video.c \
editfuncs.c \
editops.c \
filecache.c \
framecache.c \
instream.c \
medialist.c \
medialist_xml.c \
render_outstream.c \
outstream.c \
outstream_xml.c \
project.c \
project_xml.c \
projectsettings.c \
renderer.c \
timerange.c \
track.c \
track_xml.c

