
if HAVE_PLAYER
player_subdirs = player
else
player_subdirs =
endif

if HAVE_PLUGINCFG
plugincfg_subdirs = plugincfg
else
plugincfg_subdirs =
endif

if HAVE_ALSAMIXER
alsamixer_subdirs = alsamixer
else
alsamixer_subdirs =
endif

if HAVE_CAMELOT
camelot_subdirs = camelot
else
camelot_subdirs =
endif

SUBDIRS = $(player_subdirs) \
$(plugincfg_subdirs) \
$(alsamixer_subdirs) \
$(camelot_subdirs)
