
pkgdatadir = $(datadir)/gmerlin/icons

icons = \
audio_16.png \
camelot_icon.png \
config_16.png \
digit_0.png \
digit_1.png \
digit_2.png \
digit_3.png \
digit_4.png \
digit_5.png \
digit_6.png \
digit_7.png \
digit_8.png \
digit_9.png \
digit_colon.png \
digit_minus.png \
display_mode_all.png \
display_mode_all_rem.png \
display_mode_none.png \
display_mode_rem.png \
down_16.png \
drive_16.png \
drive_error_16.png \
drive_running_16.png \
first_16.png \
folder_closed_16.png \
folder_open_16.png \
hardware_16.png \
info_16.png \
last_16.png \
left_16.png \
lock_16.png \
mixer_icon.png \
mute_16.png \
player_icon.png \
plugincfg_icon.png \
record_16.png \
repeat_mode_1.png \
repeat_mode_all.png \
repeat_mode_none.png \
right_16.png \
state_buffering_1.png \
state_buffering_2.png \
state_buffering_3.png \
state_buffering_4.png \
state_buffering_5.png \
state_changing.png \
state_error.png \
state_paused.png \
state_playing.png \
state_seeking.png \
state_stopped.png \
tearoff_16.png \
tracks_dnd_32.png \
trash_16.png \
transcoder_icon.png \
tree_root_16.png \
up_16.png \
video_16.png \
gmerlin.jpg

pkgdata_DATA = $(icons)

dist_pkgdata_DATA = $(icons)

