if HAVE_X11
x11_subdirs = x11
else
x11_subdirs =
endif

SUBDIRS=gmerlin gui_gtk $(x11_subdirs)

noinst_HEADERS = \
bgfreetype.h \
bgfrei0r.h \
bglv.h \
bgladspa.h \
float_cast.h \
frei0r.h \
ladspa.h \
language_table.h \
md5.h \
ovl2text.h \
playerprivate.h \
player_thread.h \
recorder_private.h \
registry_priv.h \
treeprivate.h \
pluginreg_priv.h \
visualize_priv.h

