pkgincludedir=$(includedir)/gmerlin
pkginclude_HEADERS = avdec.h

noinst_HEADERS = \
asmrp.h \
avdec_private.h \
bswap.h \
codecs.h \
dvb_channels.h \
dvframe.h \
http.h \
id3.h \
language_table.h \
mms.h \
mpegts_common.h \
nanosoft.h \
pes_header.h \
pngreader.h \
qt.h \
rmff.h \
RTjpeg.h \
rtsp.h \
sdp.h \
utils.h \
vorbis_comment.h \
win32codec.h \
xing.h \
yml.h

