pkgincludedir=$(includedir)/gmerlin
pkginclude_HEADERS = avdec.h bgav_version.h bgavedl.h

noinst_HEADERS = \
a52_header.h \
asmrp.h \
avdec_private.h \
bswap.h \
codecs.h \
dvb_channels.h \
dvframe.h \
http.h \
id3.h \
language_table.h \
md5.h \
mms.h \
mpa_header.h \
mpegts_common.h \
mpv_header.h \
nanosoft.h \
pes_header.h \
pngreader.h \
qt.h \
rmff.h \
RTjpeg.h \
rtsp.h \
sdp.h \
utils.h \
vorbis_comment.h \
win32codec.h \
xing.h \
yml.h

EXTRA_DIST = bgav_version.h.in
