pkgincludedir=$(includedir)/gmerlin
pkginclude_HEADERS = avdec.h bgav_version.h

noinst_HEADERS = \
a52_header.h \
asmrp.h \
audioparser_priv.h \
avdec_private.h \
bgav_sem.h \
bitstream.h \
bswap.h \
cavs_header.h \
codecs.h \
dvb_channels.h \
dvframe.h \
h264_header.h \
http.h \
id3.h \
language_table.h \
md5.h \
mms.h \
mpa_header.h \
mpeg4_header.h \
mpegts_common.h \
mpv_header.h \
mxf.h \
nanosoft.h \
parser.h \
pes_header.h \
pngreader.h \
ptscache.h \
qt.h \
rmff.h \
RTjpeg.h \
rtp.h \
rtsp.h \
sdp.h \
utils.h \
vc1_header.h \
videoparser_priv.h \
vorbis_comment.h \
win32codec.h \
xing.h \
yml.h

EXTRA_DIST = bgav_version.h.in
